colocar archivos js por videos

--- a/index.html
+++ b/index.html
@@ -2,77 +2,11 @@
 <html>
 <head>
 	<title></title>
+	<!--- <script type="text/javascript" src="video1.js"></script> -->
+	<!--- <script type="text/javascript" src="video2.js"></script> -->
 </head>
 <body>
 
 <h1>hola mundo</h1>
-<script type="text/javascript">
-	/* Video 1;
-		Las variables declaras con VAR son de ambito global.
-
-		LET: Las variables delcaradas con LECT son de ambito de un bloque solamente
-
-		WINDOW: contiene todo lo que se encuentro en el DOM
-	*/
-
-
-	/*************** Video 1: ***********
-	console.log(window)
-	console.log("************VAR*********");
-	var musica = "baladas";
-	console.log("variables antes del bloque",  musica);
-
-	{
-		var musica = "rancheras";
-		console.log("variables destro del bloque",  musica)
-	}
-	console.log("variables despues del bloque",  musica)
-	console.log('hola');
-
-	console.log("************LET*********");
-
-	let musica2 = "baladas";
-	console.log("variables antes del bloque",  musica2);
-
-	{
-		let musica2 = "rancheras";
-		console.log("variables destro del bloque",  musica2)
-	}
-	console.log("variables despues del bloque",  musica2)
-	console.log('hola');
-	*/
-
-
-	/********** Video 2 *********
-	Constante
-
-	CONST = Son aquellas variables que no van a cambiar su valor dentro del flujo
-	*/
-	/*
-	const PI = 3.1416;
-	console.log(PI)
-
-	let objetoPerson = {
-		nombre: "deibis",
-		edad: "27"
-	}
-
-	let arraycolores = ['negro', 'blanco', 'azul'];
-
-	console.log(objetoPerson);
-	console.log(arraycolores);
-	 //Add Propiedades nuevas al objeto
-	objetoPerson.email = "deibiscontreras016@gmail.com";
-
-	arraycolores.push('ananrajnado');
-	console.log(objetoPerson);
-	console.log(arraycolores);
-	*/
-
-	/* *********VIDEO 3*********** */
-
-	
-
-</script>
 </body>
 </html>
