--- a/index.html
+++ b/index.html
@@ -2,11 +2,36 @@
 <html>
 <head>
 	<title></title>
-	<!--- <script type="text/javascript" src="video1.js"></script> -->
-	<!--- <script type="text/javascript" src="video2.js"></script> -->
+	<!--- <script type="text/javascript" src="video1_variablevar_let.js"></script> -->
+	<!--- <script type="text/javascript" src="video2_constante.js"></script> 
+	<script type="text/javascript" src="video3_cadena_texto_strings.js"></script>
+	<script type="text/javascript" src="video4_template_string_concatenacion.js"></script>
+	<script type="text/javascript" src="video5_numeros.js"></script> 
+	<script type="text/javascript" src="video6_booleans.js"></script>
+	<script type="text/javascript" src="video7_undefined_null_Nan.js"></script>
+	<script type="text/javascript" src="video8_funciones.js"></script>
+	<script type="text/javascript" src="video_9_array.js"></script>-->
+	<script type="text/javascript" src="videos10_objetos.js"></script>
+
+	
+
+	
+
+video8_funciones
+	
+
+
+	
 </head>
 <body>
 
 <h1>hola mundo</h1>
+<ul>
+	<li>Primevera</li>
+	<li>Verano</li>
+	<li>Otono</li>
+	<li>Invierno</li>
+</ul>
+
 </body>
 </html>
